5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4128/executions/1593_588.log
== TEST (2019-03-26 13:12:18) 
-- CODE:

valor = float(input("Qual o valor do saque? ")
notasR50 = valor // 50
restoR50 = valor % 50
notasR10 = restoR50 // 10
restoR10 = restoR50 % 10
notasR2 = restoR10 // 2

print(int(notasR50))
print(int(notasR10))
print(int(notasR2))
-- ERROR:
File "XXXX", line 3
    notasR50 = valor // 50
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 13:16:01) 
-- CODE:

valor = float(input("Qual o valor do saque? "))
notasR50 = valor // 50
restoR50 = valor % 50
notasR10 = restoR50 // 10
restoR10 = restoR50 % 10
notasR2 = restoR10 // 2

print(int(notasR50))
print(int(notasR10))
print(int(notasR2))
-- OUTPUT:
19
4
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 13:16:52) 
-- CODE:

valor = int(input("Qual o valor do saque? "))
notasR50 = valor // 50
restoR50 = valor % 50
notasR10 = restoR50 // 10
restoR10 = restoR50 % 10
notasR2 = restoR10 // 2

print(int(notasR50))
print(int(notasR10))
print(int(notasR2))
-- OUTPUT:
19
4
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 13:17:21) 
-- CODE:

valor = int(input("Qual o valor do saque? "))
notasR50 = valor // 50
restoR50 = valor % 50
notasR10 = restoR50 // 10
restoR10 = restoR50 % 10
notasR2 = restoR10 // 2

print(int(notasR50))
print(int(notasR10))
print(int(notasR2))
-- EXECUTION TIME:
0.13407
-- TEST CASE 1:
---- input:
990
---- correct output:
9
1
4
---- user output:
19
4
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 13:18:26) 
-- CODE:

valor = int(input("Qual o valor do saque? "))
notasR100 = valor // 50
restoR100 = valor % 50
notasR50 = restoR100 // 10
restoR50 = restoR100 % 10
notasR10 = restoR50 // 2

print(int(notasR100))
print(int(notasR50))
print(int(notasR10))
-- OUTPUT:
19
4
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 13:18:51) 
-- CODE:

valor = int(input("Qual o valor do saque? "))
notasR100 = valor // 50
restoR100 = valor % 50
notasR50 = restoR100 // 10
restoR50 = restoR100 % 10
notasR10 = restoR50 // 2

print(int(notasR100))
print(int(notasR50))
print(int(notasR10))
-- OUTPUT:
19
4
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 13:18:56) 
-- CODE:

valor = int(input("Qual o valor do saque? "))
notasR100 = valor // 50
restoR100 = valor % 50
notasR50 = restoR100 // 10
restoR50 = restoR100 % 10
notasR10 = restoR50 // 2

print(int(notasR100))
print(int(notasR50))
print(int(notasR10))
-- EXECUTION TIME:
0.145332
-- TEST CASE 1:
---- input:
990
---- correct output:
9
1
4
---- user output:
19
4
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 13:20:00) 
-- CODE:

valor = int(input("Qual o valor do saque? "))
notasR100 = valor // 50
restoR100 = valor % 50
notasR50 = restoR100 // 10
restoR50 = restoR100 % 10
notasR10 = restoR50 // 2

print(int(notasR100))
print(int(notasR50))
print(int(notasR10))
-- OUTPUT:
19
4
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 13:20:53) 
-- CODE:

valor = int(input("Qual o valor do saque? "))
notasR100 = valor // 100
restoR100 = valor % 100
notasR50 = restoR100 // 50
restoR50 = restoR100 % 50
notasR10 = restoR50 // 10

print(int(notasR100))
print(int(notasR50))
print(int(notasR10))
-- OUTPUT:
9
1
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 13:20:59) 
-- CODE:

valor = int(input("Qual o valor do saque? "))
notasR100 = valor // 100
restoR100 = valor % 100
notasR50 = restoR100 // 50
restoR50 = restoR100 % 50
notasR10 = restoR50 // 10

print(int(notasR100))
print(int(notasR50))
print(int(notasR10))
-- EXECUTION TIME:
0.161568
-- TEST CASE 1:
---- input:
990
---- correct output:
9
1
4
---- user output:
9
1
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:40:49) 
-- CODE:
valor = int(input("Qual o valor do saque? "))
notasR100 = valor // 100
restoR100 = valor % 100
notasR50 = restoR100 // 50
restoR50 = restoR100 % 50
notasR10 = restoR50 // 10

print(int(notasR100))
print(int(notasR50))
print(int(notasR10))
-- EXECUTION TIME:
0.192709
-- TEST CASE 1:
---- input:
990
---- correct output:
9
1
4
---- user output:
9
1
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 12:12:50) 
-- CODE:
valor = int(input("Qual o valor do saque? "))
notasR100 = valor // 100
restoR100 = valor % 100
notasR50 = restoR100 // 50
restoR50 = restoR100 % 50
notasR10 = restoR50 // 10

print(int(notasR100))
print(int(notasR50))
print(int(notasR10))
-- EXECUTION TIME:
0.194327
-- TEST CASE 1:
---- input:
990
---- correct output:
9
1
4
---- user output:
9
1
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 12:26:30) 
-- CODE:
valor = int(input("Qual o valor do saque? "))
notasR100 = valor // 100
restoR100 = valor % 100
notasR50 = restoR100 // 50
restoR50 = restoR100 % 50
notasR10 = restoR50 // 10

print(int(notasR100))
print(int(notasR50))
print(int(notasR10))
-- EXECUTION TIME:
0.218384
-- TEST CASE 1:
---- input:
990
---- correct output:
9
1
4
---- user output:
9
1
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 12:38:24) 
-- CODE:
valor = int(input("Qual o valor do saque? "))
notasR100 = valor // 100
restoR100 = valor % 100
notasR50 = restoR100 // 50
restoR50 = restoR100 % 50
notasR10 = restoR50 // 10

print(int(notasR100))
print(int(notasR50))
print(int(notasR10))
-- EXECUTION TIME:
0.208148
-- TEST CASE 1:
---- input:
990
---- correct output:
9
1
4
---- user output:
9
1
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 12:28:49) 
-- CODE:
valor = int(input("Qual o valor do saque? "))
notasR100 = valor // 100
restoR100 = valor % 100
notasR50 = restoR100 // 50
restoR50 = restoR100 % 50
notasR10 = restoR50 // 10

print(int(notasR100))
print(int(notasR50))
print(int(notasR10))
-- EXECUTION TIME:
0.191937
-- TEST CASE 1:
---- input:
990
---- correct output:
9
1
4
---- user output:
9
1
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
